@@ -1,5 +1,5 @@
 /*
- *      Copyright 2001-2004 Fraunhofer Gesellschaft, Munich, Germany, for its 
+ *      Copyright 2001-2025 Fraunhofer Gesellschaft, Munich, Germany, for its
  *      Fraunhofer Institute Computer Architecture and Software Technology
  *      (FIRST), Berlin, Germany
  *      
@@ -59,35 +59,35 @@ public class ListFilter extends LocaleRegexTokenFilter implements CacheFilter {
 
   public ListFilter() {
     super();
-    openList.put(new Character('-'), "<ul class=\"minus\">");
-    openList.put(new Character('*'), "<ul class=\"star\">");
-    openList.put(new Character('#'), "<ol>");
-    openList.put(new Character('i'), "<ol class=\"roman\">");
-    openList.put(new Character('I'), "<ol class=\"ROMAN\">");
-    openList.put(new Character('a'), "<ol class=\"alpha\">");
-    openList.put(new Character('A'), "<ol class=\"ALPHA\">");
-    openList.put(new Character('g'), "<ol class=\"greek\">");
-    openList.put(new Character('h'), "<ol class=\"hiragana\">");
-    openList.put(new Character('H'), "<ol class=\"HIRAGANA\">");
-    openList.put(new Character('k'), "<ol class=\"katakana\">");
-    openList.put(new Character('K'), "<ol class=\"KATAKANA\">");
-    openList.put(new Character('j'), "<ol class=\"HEBREW\">");
-    openList.put(new Character('1'), "<ol>");
-    closeList.put(new Character('-'), UL_CLOSE);
-    closeList.put(new Character('*'), UL_CLOSE);
-    closeList.put(new Character('#'), OL_CLOSE);
-    closeList.put(new Character('i'), OL_CLOSE);
-    closeList.put(new Character('I'), OL_CLOSE);
-    closeList.put(new Character('a'), OL_CLOSE);
-    closeList.put(new Character('A'), OL_CLOSE);
-    closeList.put(new Character('1'), OL_CLOSE);
-    closeList.put(new Character('g'), OL_CLOSE);
-    closeList.put(new Character('G'), OL_CLOSE);
-    closeList.put(new Character('h'), OL_CLOSE);
-    closeList.put(new Character('H'), OL_CLOSE);
-    closeList.put(new Character('k'), OL_CLOSE);
-    closeList.put(new Character('K'), OL_CLOSE);
-    closeList.put(new Character('j'), OL_CLOSE);
+    openList.put(Character.valueOf('-'), "<ul class=\"minus\">");
+    openList.put(Character.valueOf('*'), "<ul class=\"star\">");
+    openList.put(Character.valueOf('#'), "<ol>");
+    openList.put(Character.valueOf('i'), "<ol class=\"roman\">");
+    openList.put(Character.valueOf('I'), "<ol class=\"ROMAN\">");
+    openList.put(Character.valueOf('a'), "<ol class=\"alpha\">");
+    openList.put(Character.valueOf('A'), "<ol class=\"ALPHA\">");
+    openList.put(Character.valueOf('g'), "<ol class=\"greek\">");
+    openList.put(Character.valueOf('h'), "<ol class=\"hiragana\">");
+    openList.put(Character.valueOf('H'), "<ol class=\"HIRAGANA\">");
+    openList.put(Character.valueOf('k'), "<ol class=\"katakana\">");
+    openList.put(Character.valueOf('K'), "<ol class=\"KATAKANA\">");
+    openList.put(Character.valueOf('j'), "<ol class=\"HEBREW\">");
+    openList.put(Character.valueOf('1'), "<ol>");
+    closeList.put(Character.valueOf('-'), UL_CLOSE);
+    closeList.put(Character.valueOf('*'), UL_CLOSE);
+    closeList.put(Character.valueOf('#'), OL_CLOSE);
+    closeList.put(Character.valueOf('i'), OL_CLOSE);
+    closeList.put(Character.valueOf('I'), OL_CLOSE);
+    closeList.put(Character.valueOf('a'), OL_CLOSE);
+    closeList.put(Character.valueOf('A'), OL_CLOSE);
+    closeList.put(Character.valueOf('1'), OL_CLOSE);
+    closeList.put(Character.valueOf('g'), OL_CLOSE);
+    closeList.put(Character.valueOf('G'), OL_CLOSE);
+    closeList.put(Character.valueOf('h'), OL_CLOSE);
+    closeList.put(Character.valueOf('H'), OL_CLOSE);
+    closeList.put(Character.valueOf('k'), OL_CLOSE);
+    closeList.put(Character.valueOf('K'), OL_CLOSE);
+    closeList.put(Character.valueOf('j'), OL_CLOSE);
   };
 
   public void handleMatch(StringBuffer buffer, MatchResult result, FilterContext context) {
@@ -136,12 +136,12 @@ public class ListFilter extends LocaleRegexTokenFilter implements CacheFilter {
 
       for (int i = sharedPrefixEnd; i < lastBullet.length; i++) {
         //Logger.log("closing " + lastBullet[i]);
-        buffer.append(closeList.get(new Character(lastBullet[i]))).append("\n");
+        buffer.append(closeList.get(Character.valueOf(lastBullet[i]))).append("\n");
       }
 
       for (int i = sharedPrefixEnd; i < bullet.length; i++) {
         //Logger.log("opening " + bullet[i]);
-        buffer.append(openList.get(new Character(bullet[i]))).append("\n");
+        buffer.append(openList.get(Character.valueOf(bullet[i]))).append("\n");
       }
       buffer.append("<li>");
       buffer.append(line.substring(line.indexOf(' ') + 1));
@@ -151,7 +151,7 @@ public class ListFilter extends LocaleRegexTokenFilter implements CacheFilter {
 
     for (int i = lastBullet.length - 1; i >= 0; i--) {
       //Logger.log("closing " + lastBullet[i]);
-      buffer.append(closeList.get(new Character(lastBullet[i])));
+      buffer.append(closeList.get(Character.valueOf(lastBullet[i])));
     }
   }
 }
